So I realized after I made the system that there is this thing in AsyncChatEvent called "event.renderer()" so made the plugin use it instead. The not so optimized looping API methods should still work tho. Other mostly bugfixes and added new actions to the /yochat channels command.